Chat photos (P4 media): attach up to 10 photos per message, with a trip album
- PhotoProcessor: two renditions per upload -- the untouched original plus a
  display copy no wider than 800px. HEIC decodes server-side (NightMonkeys
  imageio-heif over the system libheif via FFM) and stores a full-res JPEG;
  animated GIFs pass through unresized; EXIF orientation is baked into
  re-encodes; magic-byte sniffing, decode-bomb guard.
- ChatUploadServlet at /chat-photos/*: XHR multipart staging endpoint (the
  chat page's JSF form must never go multipart -- Tomcat's maxPartCount
  counts ordinary fields). Serves photos itself in local mode.
- ChatPhotos (#{chatPhotos}): S3-or-local storage, the staging registry that
  makes attachment references author-and-trip-scoped, album rows in slot
  tripChat-{tripId}, and the moderation cascade (objects + CDN invalidation
  + album rows). ONE static instance on purpose -- a FacesContext-sensitive
  lookup split the staging registry between the servlet and the JSF send.
- Send path: attachments on ChatMessage (kind MEDIA), photo-only messages
  allowed, staged-key validation, album rows recorded after the durable
  write. Removing a message removes its photos everywhere; retention expiry
  deliberately does not (album semantics).
- MediaItem.smallKey (nullable, back-compatible) carries the display
  rendition; media deletes now use PartitionScanCache.removeOne -- a full
  invalidation is data loss in local mode, where the cache IS the datastore.
  InMemoryPersistence backs the media table so local albums survive reloads.
- ChatSettings: allowMedia defaults on; 10 photos / 10 MB caps (no channel
  rows predate this, chat was never deployed).
- CI installs libheif + the libde265 plugin so the coverage gate exercises
  the real HEIC decode; surefire's java.library.path covers brew + multiarch.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>